force-app/main/default/objects/Facility_Hours__c/Facility_Hours__c.object-meta.xml
<CustomObject>
    <label>Facility Hours</label>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>