force-app/main/default/objects/Facility_Hours__c/fields/Friday_Open__c.field-meta.xml
<CustomField>
    <fullName>Friday_Open__c</fullName>
    <label>Friday_Open</label>
    <type>Time</type>
</CustomField>