force-app/main/default/objects/Facility_Hours__c/fields/Monday_Open__c.field-meta.xml
<CustomField>
    <fullName>Monday_Open__c</fullName>
    <label>Monday_Open</label>
    <type>Time</type>
</CustomField>