force-app/main/default/objects/Facility_Hours__c/fields/Saturday_Close__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Close__c</fullName>
    <label>Saturday_Close</label>
    <type>Time</type>
</CustomField>