force-app/main/default/objects/Facility_Hours__c/fields/Saturday_Open__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Open__c</fullName>
    <label>Saturday_Open</label>
    <type>Time</type>
</CustomField>