force-app/main/default/objects/Facility_Hours__c/fields/Thursday_Open__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Open__c</fullName>
    <label>Thursday_Open</label>
    <type>Time</type>
</CustomField>