force-app/main/default/objects/Facility_Hours__c/fields/Tuesday_Close__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Close__c</fullName>
    <label>Tuesday_Close</label>
    <type>Time</type>
</CustomField>