force-app/main/default/objects/Facility_Hours__c/fields/Tuesday_Open__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Open__c</fullName>
    <label>Tuesday_Open</label>
    <type>Time</type>
</CustomField>