force-app/main/default/objects/Facility_Hours__c/fields/Wednesday_Close__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Close__c</fullName>
    <label>Wednesday_Close</label>
    <type>Time</type>
</CustomField>